# fastapi-production-foundation

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  TECH_DEBT.md  alembic.ini  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  requirements.txt
.ai-rules/: agent-orchestration.md  anti-overengineering.md  context-map.md  database.md  documentation.md  git.md  learning-mode.md  model-routing.md  repository.md  review-checklist.md  review.md
.claude/: settings.json
.commands/: build-next-roadmap-task.md  builder-handoff.md  review-current-branch.md  two-agent-review.md
.github/: dependabot.yml
alembic/: env.py
app/: main.py  password_reset_cleanup.py  seed_dev_data.py  worker.py
docs/: ai-workflows.md  backup-restore-automation.md  ci-policy-guards.md  commands.md  legacy-route-deprecation.md  pitr-and-scheduled-backups.md  production-deployment.md  secret-management.md  template-onboarding.md  troubleshooting.md  two-agent-review-workflow.md  webhook-idempotency.md  worker-reliability.md
perf/: README.md
scripts/: deploy_promote.sh  smoke_test.sh  validate-ai-workflows.sh
tests/: conftest.py  database.py  test_api_versioning.py  test_audit_logs.py  test_auth.py  test_cache.py  test_client_ip.py  test_config.py  test_error_responses.py  test_files.py  test_health.py  test_idempotency.py  test_logging.py  test_metrics.py  test_openapi_contract.py  test_permissions.py  test_rate_limit.py  test_seed_dev_data.py  test_storage_service.py  test_tenancy.py  test_users.py  (+5 more)
(+79 files in other folders)
