[project]
name = "fastapi-production-foundation"
version = "0.1.0"
description = "AI-ready FastAPI production foundation for SaaS/API projects with auth, PostgreSQL, Redis, Docker, CI/CD, observability, and agent workflow rules."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1,<0.139",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.49,<0.50",
    "sqlalchemy>=2.0.51,<2.1",
    "psycopg2-binary>=2.9,<2.10",
    "pydantic-settings>=2.14.2,<2.15",
    "alembic>=1.18.5,<1.19",
    "python-jose[cryptography]>=3.5,<3.6",
    "passlib[bcrypt]>=1.7.4,<1.8",
    "python-multipart>=0.0.32,<0.0.33",
    "email-validator>=2.3,<2.4",
    "bcrypt==4.3.0",
    "redis==8.0.1",
    "boto3>=1.43.36,<1.44",
    "sentry-sdk>=2.63.0,<3",
    "prometheus-client>=0.25.0,<0.26",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<9.2",
    "pytest-cov>=6.0,<7",
    "pytest-xdist>=3.8.0,<3.9",
    "httpx>=0.28,<0.29",
    "ruff>=0.15.20,<0.16",
    "pre-commit>=4.6,<4.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true
data_file = "/tmp/.coverage"

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85

[tool.uv]
package = false
